--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 	<head>
 
 	<title>Duke Dog: Mascot Extraordinare</title>
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sofadi+One&display=swap" rel="stylesheet">
+
 	<meta charset="UTF-8">
 	<meta name="description" content="Duke Dog's personal resume; hire today for all your mascot needs!">
  	<meta name="author" content="Isa Dagostino">
@@ -11,55 +24,92 @@
 
 		<!-- Chat GPT prompt: Please generate a fun, lighthearted resume for the mascot of James Madison University, the "Duke Dog". He is a bulldog.-->
 
-	</head>
+	<style>
+
+		h1, h2 {
+          font-family: "Sofadi One", "Roboto", system-ui;
+          font-size: 40px;
+          color: #660033
+        }
+
+ 		h3 { font-family: "Sofadi One", "Roboto", system-ui; 
+ 		font-size: 25px;
+ 		color: #000066
+ 	}
+
+		p { font-family: "Bebas Neue", "Roboto", sans-serif; 
+		font-size: 16px;
+ 		color: #555555
+ 	}
+
+		li {
+		font-family: "Bebas Neue", "Roboto", sans-serif; 
+		font-size: 16px;
+ 		color: #555555
+ 	}
+
+		body {
+			background-color: beige;
+		}
+
+		ul {
+  list-style-type: circle;
+}
+
+	h2 {
+	    text-decoration: underline;
+	}
+			</style>
+
+		</head>
 
 <body>
 
-<a href="https://en.wikipedia.org/wiki/Dog" target="_blank">
-<h1>Duke Dog</h1></a>
+	<a href="https://en.wikipedia.org/wiki/Dog" target="_blank">
+	<h1>Duke Dog</h1></a>
 
-		<img src="dukedog.jpg" alt="Image of the James Madison University mascot, the Duke Dog, greeting a bronze statue of himself in bulldog form.">
+			<img src="dukedog.jpg" alt="Image of the James Madison University mascot, the Duke Dog, greeting a bronze statue of himself in bulldog form.">
 
 <h2> Contact Information:</h2>
-<p>Mascot Extraordinare at <a href="https://www.jmu.edu/index.shtml" target="_blank">James Madison University</a><br>
-Harrisonburg, VA. 2008 - Present<br>
-Email: Dukedog@jmu.edu<br>
-Phone number: 0-123-456-789</p>
+	<p>Mascot Extraordinare at <a href="https://www.jmu.edu/index.shtml" target="_blank">James Madison University</a><br>
+	Harrisonburg, VA. 2008 - Present<br>
+	Email: Dukedog@jmu.edu<br>
+	Phone number: 0-123-456-789</p>
 
 <h2>Experience</h2>
-<ul>
-<li>Game Day Enthusiast: Lead the crowd in cheers, high-fives, and the occasional synchronized howl, contributing to an electrifying stadium atmosphere.</li>
-<li>Fan Engagement Specialist: Engage with fans of all ages through playful antics, photo ops, and dynamic dance moves, making every interaction memorable and fun.</li>
-<li>Community Ambassador: Represent JMU at local and regional events, spreading school spirit and championing various charitable causes.</li>
-<li>Event Coordinator: Participate in and sometimes orchestrate pep rallies, parades, and special events, ensuring a high-energy environment and enthusiastic audience.</li>
-<li>Social Media Influencer: Boost school spirit through viral posts, adorable pictures, and heartwarming videos on JMU’s social media channels.</li>
-</ul>
+	<ul>
+	<li>Game Day Enthusiast: Lead the crowd in cheers, high-fives, and the occasional synchronized howl, contributing to an electrifying stadium atmosphere.</li>
+	<li>Fan Engagement Specialist: Engage with fans of all ages through playful antics, photo ops, and dynamic dance moves, making every interaction memorable and fun.</li>
+	<li>Community Ambassador: Represent JMU at local and regional events, spreading school spirit and championing various charitable causes.</li>
+	<li>Event Coordinator: Participate in and sometimes orchestrate pep rallies, parades, and special events, ensuring a high-energy environment and enthusiastic audience.</li>
+	<li>Social Media Influencer: Boost school spirit through viral posts, adorable pictures, and heartwarming videos on JMU’s social media channels.</li>
+	</ul>
 
 
 <h2>Education</h2>
 
-<p>Degree in School Spirit and Mascot Arts<br>
-University of Tail-Wagging Excellence<br>
-Graduated: 2008<br></p>
+	<p>Degree in School Spirit and Mascot Arts<br>
+	University of Tail-Wagging Excellence<br>
+	Graduated: 2008<br></p>
 
 <h3>Certifications:</h3>
 
-<p>Advanced Cheerleading<br>
-Tail-Wagging Fundamentals<br>
-Fan Interaction Techniques</p>
+	<p>Advanced Cheerleading<br>
+	Tail-Wagging Fundamentals<br>
+	Fan Interaction Techniques</p>
 
 <h2>Awards & Honors</h2>
-<ul>
-<li>Most Spirited Mascot Award – James Madison University (2015, 2018)</li>
-<li>Best Game Day Performance – College Mascot Association (2019)</li>
-<li>Fan Favorite – JMU Homecoming Celebration (2021)</li>
-</ul>
+	<ul>
+	<li>Most Spirited Mascot Award – James Madison University (2015, 2018)</li>
+	<li>Best Game Day Performance – College Mascot Association (2019)</li>
+	<li>Fan Favorite – JMU Homecoming Celebration (2021)</li>
+	</ul>
 
 <h2>Hobbies and Skills:</h2>
-<p>Tail-Wagging: Perfecting the art of tail movement to maximize cheerfulness.<br>
-Playful Pranks: Engaging in harmless mischief to amuse fans and fellow mascots.<br>
-Dog-Friendly Activities: Enjoying long walks, playful fetch sessions, and lounging in the sun.</p>
+	<p>Tail-Wagging: Perfecting the art of tail movement to maximize cheerfulness.<br>
+	Playful Pranks: Engaging in harmless mischief to amuse fans and fellow mascots.<br>
+	Dog-Friendly Activities: Enjoying long walks, playful fetch sessions, and lounging in the sun.</p>
 
-</body>
+	</body>
 
 </html>
