--- a/index.html
+++ b/index.html
@@ -1,115 +1,149 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
 
-	<head>
+        <!-- LOAD BOOTSTRAP CSS - DO NOT DELETE -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- END LOADING BOOTSTRAP CSS -->
 
-	<title>Duke Dog: Mascot Extraordinare</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Duke Dog's Personal Resume">
+    <meta name="author" content="Isa Dagostino">
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <title>Duke Dog's Resume</title>
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sofadi+One&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap" rel="stylesheet">
 
-	<meta charset="UTF-8">
-	<meta name="description" content="Duke Dog's personal resume; hire today for all your mascot needs!">
- 	<meta name="author" content="Isa Dagostino">
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sofadi+One&display=swap" rel="stylesheet">
 
-		<!-- Chat GPT prompt: Please generate a fun, lighthearted resume for the mascot of James Madison University, the "Duke Dog". He is a bulldog.-->
+        <!-- Chat GPT prompt: Please generate a fun, lighthearted resume for the mascot of James Madison University, the "Duke Dog". He is a bulldog.-->
 
-	<style>
+ <style>
 
-		h1, h2 {
+  .header-box {
+      background-color: rebeccapurple;
+      padding: 20px;
+      text-align: center;
+  }
+
+
+    h1, h2 {
           font-family: "Sofadi One", "Roboto", system-ui;
           font-size: 40px;
           color: #660033
         }
 
- 		h3 { font-family: "Sofadi One", "Roboto", system-ui; 
- 		font-size: 25px;
- 		color: #000066
- 	}
+    h3 { font-family: "Sofadi One", "Roboto", system-ui; 
+    font-size: 25px;
+    color: #000066
+  }
 
-		p { font-family: "Bebas Neue", "Roboto", sans-serif; 
-		font-size: 16px;
- 		color: #555555
- 	}
+    p { font-family: "Bebas Neue", "Roboto", sans-serif; 
+    font-size: 16px;
+    color: #000000
+  }
 
-		li {
-		font-family: "Bebas Neue", "Roboto", sans-serif; 
-		font-size: 16px;
- 		color: #555555
- 	}
+    li {
+    font-family: "Bebas Neue", "Roboto", sans-serif; 
+    font-size: 16px;
+    color: #555555
+  }
 
-		body {
-			background-color: beige;
-		}
+    body {
+      background-color: floralwhite;
+  }
 
-		ul {
+    ul {
   list-style-type: circle;
 }
 
-	h2 {
-	    text-decoration: underline;
-	}
-			</style>
+  h2 {
+      text-decoration: underline;
+  }
 
-		</head>
+
+      </style>
+    
+    <!-- Custom styles - add your own CSS to this stylesheet -->
+    <link href="style.css" rel="stylesheet">
+  </head>
+
 
 <body>
+<header class="header-box">
+    <div class="header-content">
+        <h1>Duke Dog's Resume</h1>
+        <p>Your go-to mascot for all events!</p>
+    </div>
+</header>
 
-	<a href="https://en.wikipedia.org/wiki/Dog" target="_blank">
-	<h1>Duke Dog</h1></a>
+  <div class="container">
+  <div class="row align-items-start"> 
+    <div class="col">
 
-			<img src="dukedog.jpg" alt="Image of the James Madison University mascot, the Duke Dog, greeting a bronze statue of himself in bulldog form.">
+      <h1>Duke Dog: Mascot Extraordinare</h1>
 
-<h2> Contact Information:</h2>
-	<p>Mascot Extraordinare at <a href="https://www.jmu.edu/index.shtml" target="_blank">James Madison University</a><br>
-	Harrisonburg, VA. 2008 - Present<br>
-	Email: Dukedog@jmu.edu<br>
-	Phone number: 0-123-456-789</p>
+        <a href="https://en.wikipedia.org/wiki/Dog" target="_blank">
 
-<h2>Experience</h2>
-	<ul>
-	<li>Game Day Enthusiast: Lead the crowd in cheers, high-fives, and the occasional synchronized howl, contributing to an electrifying stadium atmosphere.</li>
-	<li>Fan Engagement Specialist: Engage with fans of all ages through playful antics, photo ops, and dynamic dance moves, making every interaction memorable and fun.</li>
-	<li>Community Ambassador: Represent JMU at local and regional events, spreading school spirit and championing various charitable causes.</li>
-	<li>Event Coordinator: Participate in and sometimes orchestrate pep rallies, parades, and special events, ensuring a high-energy environment and enthusiastic audience.</li>
-	<li>Social Media Influencer: Boost school spirit through viral posts, adorable pictures, and heartwarming videos on JMU’s social media channels.</li>
-	</ul>
+      <img src="dukedog.jpg" alt="Image of the James Madison University mascot, the Duke Dog, greeting a bronze statue of himself in bulldog form." class="img-fluid">
+    </a>
+    </div>
 
+    <div class="col">
+      <h2> Contact Information:</h2>
+     <p>Mascot Extraordinare at <a href="https://www.jmu.edu/index.shtml" target="_blank">James Madison University</a><br>
+     Harrisonburg, VA. 2008 - Present<br>
+     Email: Dukedog@jmu.edu<br>
+     Phone number: 0-123-456-789</p>
 
+           <h2>Experience</h2>
+  <ul>
+  <li>Game Day Enthusiast: Lead the crowd in cheers, high-fives, and the occasional synchronized howl, contributing to an electrifying stadium atmosphere.</li>
+  <li>Fan Engagement Specialist: Engage with fans of all ages through playful antics, photo ops, and dynamic dance moves, making every interaction memorable and fun.</li>
+  <li>Community Ambassador: Represent JMU at local and regional events, spreading school spirit and championing various charitable causes.</li>
+  <li>Event Coordinator: Participate in and sometimes orchestrate pep rallies, parades, and special events, ensuring a high-energy environment and enthusiastic audience.</li>
+  <li>Social Media Influencer: Boost school spirit through viral posts, adorable pictures, and heartwarming videos on JMU’s social media channels.</li>
+  </ul>
+    </div>
+
+  <div class="col">
 <h2>Education</h2>
 
-	<p>Degree in School Spirit and Mascot Arts<br>
-	University of Tail-Wagging Excellence<br>
-	Graduated: 2008<br></p>
+  <p>Degree in School Spirit and Mascot Arts<br>
+  University of Tail-Wagging Excellence<br>
+  Graduated: 2008<br></p>
 
 <h3>Certifications:</h3>
 
-	<p>Advanced Cheerleading<br>
-	Tail-Wagging Fundamentals<br>
-	Fan Interaction Techniques</p>
+  <p>Advanced Cheerleading<br>
+  Tail-Wagging Fundamentals<br>
+  Fan Interaction Techniques</p>
 
 <h2>Awards & Honors</h2>
-	<ul>
-	<li>Most Spirited Mascot Award – James Madison University (2015, 2018)</li>
-	<li>Best Game Day Performance – College Mascot Association (2019)</li>
-	<li>Fan Favorite – JMU Homecoming Celebration (2021)</li>
-	</ul>
+  <ul>
+  <li>Most Spirited Mascot Award – James Madison University (2015, 2018)</li>
+  <li>Best Game Day Performance – College Mascot Association (2019)</li>
+  <li>Fan Favorite – JMU Homecoming Celebration (2021)</li>
+  </ul>
 
 <h2>Hobbies and Skills:</h2>
-	<p>Tail-Wagging: Perfecting the art of tail movement to maximize cheerfulness.<br>
-	Playful Pranks: Engaging in harmless mischief to amuse fans and fellow mascots.<br>
-	Dog-Friendly Activities: Enjoying long walks, playful fetch sessions, and lounging in the sun.</p>
+  <p>Tail-Wagging: Perfecting the art of tail movement to maximize cheerfulness.<br>
+  Playful Pranks: Engaging in harmless mischief to amuse fans and fellow mascots.<br>
+  Dog-Friendly Activities: Enjoying long walks, playful fetch sessions, and lounging in the sun.</p>
+</div>
 
-	</body>
-
+<!-- LOAD BOOTSTRAP JAVASCRIPT - DO NOT DELETE -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- END LOADING BOOTSTRAP JAVASCRIPT -->
+      
+  </body>
 </html>
